msdk: "GStreamer-CRITICAL: gst_buffer_resize_range failed" SPAM
Many gst msdk encode pipelines generate lots of (gst-launch-1.0:29670): GStreamer-CRITICAL **: 16:41:29.478: gst_buffer_resize_range: assertion 'bufmax >= bufoffs + offset + size' failed
messages:
$ LIBVA_DRIVER_NAME=iHD gst-launch-1.0 -vf filesrc \
location=/opt/media/src/assets/otc-media/yuv/MOBILE_352x288_30_orig_01_352x288_I420.yuv num-buffers=300 \
! rawvideoparse format=i420 width=352 height=288 framerate=25 \
! msdkh265enc rate-control=cbr bitrate=500 gop-size=30 num-slices=4 b-frames=2 hardware=true \
! video/x-h265,profile=main ! h265parse ! filesink location=output.h265
Setting pipeline to PAUSED ...
libva info: VA-API version 1.4.0
libva info: va_getDriverName() returns 0
libva info: User requested driver 'iHD'
libva info: Trying to open /opt/media/install/lib/dri/iHD_drv_video.so
libva info: Found init function __vaDriverInit_1_4
libva info: va_openDriver() returns 0
Pipeline is PREROLLING ...
Got context from element 'msdkh265enc0': gst.msdk.Context=context, gst.msdk.Context=(GstMsdkContext)"\(GstMsdkContext\)\ msdkcontext0";
/GstPipeline:pipeline0/GstRawVideoParse:rawvideoparse0.GstPad:src: caps = video/x-raw, format=(string)I420, width=(int)352, height=(int)288, interlace-mode=(string)progressive, pixel-aspect-ratio=(fraction)1/1, chroma-site=(string)jpeg, colorimetry=(string)bt601, framerate=(fraction)25/1
Redistribute latency...
/GstPipeline:pipeline0/GstMsdkH265Enc:msdkh265enc0.GstPad:sink: caps = video/x-raw, format=(string)I420, width=(int)352, height=(int)288, interlace-mode=(string)progressive, pixel-aspect-ratio=(fraction)1/1, chroma-site=(string)jpeg, colorimetry=(string)bt601, framerate=(fraction)25/1
/GstPipeline:pipeline0/GstMsdkH265Enc:msdkh265enc0.GstPad:src: caps = video/x-h265, stream-format=(string)byte-stream, alignment=(string)au, profile=(string)main, level=(string)2, width=(int)352, height=(int)288, pixel-aspect-ratio=(fraction)1/1, framerate=(fraction)25/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, chroma-site=(string)jpeg
/GstPipeline:pipeline0/GstCapsFilter:capsfilter0.GstPad:src: caps = video/x-h265, stream-format=(string)byte-stream, alignment=(string)au, profile=(string)main, level=(string)2, width=(int)352, height=(int)288, pixel-aspect-ratio=(fraction)1/1, framerate=(fraction)25/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, chroma-site=(string)jpeg
/GstPipeline:pipeline0/GstH265Parse:h265parse0.GstPad:sink: caps = video/x-h265, stream-format=(string)byte-stream, alignment=(string)au, profile=(string)main, level=(string)2, width=(int)352, height=(int)288, pixel-aspect-ratio=(fraction)1/1, framerate=(fraction)25/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, chroma-site=(string)jpeg
/GstPipeline:pipeline0/GstCapsFilter:capsfilter0.GstPad:sink: caps = video/x-h265, stream-format=(string)byte-stream, alignment=(string)au, profile=(string)main, level=(string)2, width=(int)352, height=(int)288, pixel-aspect-ratio=(fraction)1/1, framerate=(fraction)25/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, chroma-site=(string)jpeg
(gst-launch-1.0:29670): GStreamer-CRITICAL **: 16:41:29.475: gst_buffer_resize_range: assertion 'bufmax >= bufoffs + offset + size' failed
(gst-launch-1.0:29670): GStreamer-CRITICAL **: 16:41:29.478: gst_buffer_resize_range: assertion 'bufmax >= bufoffs + offset + size' failed
/GstPipeline:pipeline0/GstH265Parse:h265parse0.GstPad:src: caps = video/x-h265, stream-format=(string)byte-stream, alignment=(string)au, profile=(string)main, level=(string)2, width=(int)352, height=(int)288, pixel-aspect-ratio=(fraction)1/1, framerate=(fraction)25/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, chroma-site=(string)jpeg, chroma-format=(string)4:2:0, bit-depth-luma=(uint)8, bit-depth-chroma=(uint)8, parsed=(boolean)true, tier=(string)main
[2019-01-03 16:41:29] /GstPipeline:pipeline0/GstFileSink:filesink0.GstPad:sink: caps = video/x-h265, stream-format=(string)byte-stream, alignment=(string)au, profile=(string)main, level=(string)2, width=(int)352, height=(int)288, pixel-aspect-ratio=(fraction)1/1, framerate=(fraction)25/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, chroma-site=(string)jpeg, chroma-format=(string)4:2:0, bit-depth-luma=(uint)8, bit-depth-chroma=(uint)8, parsed=(boolean)true, tier=(string)main
(gst-launch-1.0:29670): GStreamer-CRITICAL **: 16:41:29.481: gst_buffer_resize_range: assertion 'bufmax >= bufoffs + offset + size' failed
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
(gst-launch-1.0:29670): GStreamer-CRITICAL **: 16:41:29.483: gst_buffer_resize_range: assertion 'bufmax >= bufoffs + offset + size' failed
(gst-launch-1.0:29670): GStreamer-CRITICAL **: 16:41:29.487: gst_buffer_resize_range: assertion 'bufmax >= bufoffs + offset + size' failed
<snip> previous message repeats many times </snip>
Software stack:
libva (master) heads/master-0-g382acf1 https://github.com/01org/libva
gmmlib (master) intel-gmmlib-18.4.1-0-g413896e https://github.com/intel/gmmlib
intel-vaapi-driver (master) heads/master-0-g72f10f1 https://github.com/01org/intel-vaapi-driver
intel-media-driver (master) heads/master-0-g8968471 https://github.com/intel/media-driver
msdk (master) heads/master-0-g750cfb4 https://github.com/Intel-Media-SDK/MediaSDK
gstreamer (master) heads/master-0-g74b9e72 http://anongit.freedesktop.org/git/gstreamer/gstreamer
gst-plugins-base (master) heads/master-0-ga95ab79 https://anongit.freedesktop.org/git/gstreamer/gst-plugins-base
gst-plugins-good (master) heads/master-0-gec93160 https://anongit.freedesktop.org/git/gstreamer/gst-plugins-good
gst-plugins-bad (master) heads/master-0-g2f05ee9 https://anongit.freedesktop.org/git/gstreamer/gst-plugins-bad
gstreamer-vaapi (master) heads/master-0-ge4ae7d9 https://anongit.freedesktop.org/git/gstreamer/gstreamer-vaapi