msdk: adjust the stride align

GstAllocationParams::align is set to 31 in msdkdec/msdken/msdkvpp, hence
the stride align should be greater than or equal to 31, otherwise it
will result in issue
https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/issues/861
(msdk: "GStreamer-CRITICAL: gst_buffer_resize_range failed" SPAM),

In addition, the stride for a tiled surface in the media driver is aligned to
128, so we should set the stride align for tiled surface in this plugin to 127
as well, which may avoid the NV12 issue mentioned in commit 3f2314a

Fixed https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/issues/861